--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.77MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-7.72MB/s(Youtube:不良林), server: 103.173.255.21, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-1.32MB/s(Youtube:不良林), server: 103.173.255.234, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-322.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇸🇬 新加坡-200.2KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-837.8KB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇺🇸 美国-4.94MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.46MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
+  - {name: 🇨🇳 中国-196.9KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-6.59MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
+  - {name: 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.99MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.83MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.07MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.07MB/s(Youtube:不良林) 2, server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.72MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-200.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.72MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-200.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.72MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-200.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.72MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-200.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.72MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-200.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.72MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-200.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇻🇳 越南-7.72MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-200.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
