--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.76MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.84MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-157.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-621.9KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.63MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.86MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.39MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-346.1KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇰🇷 韩国-831.7KB/s(Youtube:不良林), server: 146.56.110.129, port: 53702, type: vmess, uuid: d0ee8ec0-ef63-41aa-9087-11edf7a978b9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.12MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇮🇹 意大利-2.95MB/s(Youtube:不良林), server: 84.33.193.79, port: 18760, type: ss, cipher: aes-256-gcm, password: hg49$WH8943g3}
-  - {name: 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-406.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-518.5KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-346.5KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-333.9KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-336.1KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65028, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-831.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 🇮🇹 意大利-2.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-831.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 🇮🇹 意大利-2.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-831.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 🇮🇹 意大利-2.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-831.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 🇮🇹 意大利-2.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-831.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 🇮🇹 意大利-2.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-831.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 🇮🇹 意大利-2.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-157.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-621.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-831.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 🇮🇹 意大利-2.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
