--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-346.1KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇰🇷 韩国-831.7KB/s(Youtube:不良林), server: 146.56.110.129, port: 53702, type: vmess, uuid: d0ee8ec0-ef63-41aa-9087-11edf7a978b9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.12MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇮🇹 意大利-2.95MB/s(Youtube:不良林), server: 84.33.193.79, port: 18760, type: ss, cipher: aes-256-gcm, password: hg49$WH8943g3}
-  - {name: 🇨🇳 中国-406.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇻🇳 越南-7.31MB/s(Youtube:不良林), server: 103.173.255.228, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇨🇦 加拿大-1.96MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-6.59MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-346.1KB/s(Youtube:不良林), server: 103.253.43.228, port: 38000, type: trojan, password: da8e0008-3c2b-4363-b582-0d9a981cebea, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
   - {name: 🇨🇳 中国-518.5KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
   - {name: 🇨🇳 中国-346.5KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-831.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-346.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-831.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-346.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-831.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-346.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-346.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-831.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-346.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-831.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-346.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-831.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-346.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-831.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-346.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
       - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
