--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇻🇳 越南-7.31MB/s(Youtube:不良林), server: 103.173.255.228, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇨🇦 加拿大-1.96MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-6.59MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-346.1KB/s(Youtube:不良林), server: 103.253.43.228, port: 38000, type: trojan, password: da8e0008-3c2b-4363-b582-0d9a981cebea, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-518.5KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇻🇳 越南-7.02MB/s(Youtube:不良林), server: 103.173.255.21, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.96MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-1.39MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-1.39MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-406.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-346.5KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-333.9KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-196.5KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
   - {name: 🇨🇳 中国-336.1KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65028, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
+  - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.72MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-7.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-346.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇻🇳 越南-7.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-346.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-7.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-346.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-346.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇻🇳 越南-7.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-346.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇻🇳 越南-7.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-346.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-7.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-346.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-7.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-346.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-518.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
